--- a/src/messages_en.properties
+++ b/src/messages_en.properties
@@ -4,6 +4,7 @@ must-not-be-empty="Collection must not be empty"
 string-required="Must be a string"
 number-required="Must be a number"
 integer-required="Must be an integer number"
+date-required="Must be a date"
 boolean-required="Must be true or false"
 min-greater-max="Minmax violation"
 length-exceeded="Max {0} characters allowed"
